<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="look_gui">Look at my GUI:</string>
    <string name="click_here">Click Here</string>
    <string name="check_box">Check this out!</string>
    <string name="on_off">Switch on / off</string>
    <string name="type_hint">Type here</string>
    <string name="toast_message">Here is more information</string>
    <string name="snackbar_on">The switch is now on</string>
    <string name="snackbar_off">The switch is now off</string>
    <string name="enter_email">Enter your email address:</string>
    <string name="email_prompt">Type email here</string>
    <string name="enter_password">Type your password:</string>
    <string name="login">LOGIN</string>
    <string name="your_profile">Your profile</string>
    <string name="your_name">Your name:</string>
    <string name="enter_name">Enter your name</string>
    <string name="your_email">Your email:</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="your_pic">Your picture:</string>
    <string name="click_pic">Click the button above to take a picture</string>
    <string name="to_chat">Go to chat</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="type_here">Type here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>