<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:orientation="vertical"
    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_profile" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:nextFocusDown="@id/user_password"
        android:nextFocusUp="@id/weather_button"
        android:nextFocusRight="@id/user_password"
        android:nextFocusLeft="@id/weather_button"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@id/picture_button"
        android:nextFocusUp="@id/user_name"
        android:nextFocusRight="@id/picture_button"
        android:nextFocusLeft="@id/user_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_pic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/picture_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/picture_frame"
        android:nextFocusDown="@id/user_password"
        android:nextFocusUp="@id/chat_button"
        android:nextFocusRight="@id/user_password"
        android:nextFocusLeft="@id/chat_button"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_pic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/chat_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_chat"
        android:nextFocusDown="@id/weather_button"
        android:nextFocusUp="@id/picture_button"
        android:nextFocusRight="@id/weather_button"
        android:nextFocusLeft="@id/picture_button"/>

    <Button
        android:id="@+id/weather_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Weather Forecast"
        android:nextFocusDown="@id/user_name"
        android:nextFocusUp="@id/chat_button"
        android:nextFocusRight="@id/user_name"
        android:nextFocusLeft="@id/chat_button"/>

</LinearLayout>