<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatRoomActivity"
    android:orientation="vertical">

    <ListView
        android:id="@+id/message_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/send_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send" />

            <EditText
                android:id="@+id/chat_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_here"
                android:layout_weight="1"
                android:layout_gravity="fill"
                />

            <Button
                android:id="@+id/receive_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receive" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>